--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,6 +1,11 @@
+@import '/node_modules/swiper/swiper-bundle.min.css';
 @import '../scss/common.scss';
 @import '../scss/burger-menu.scss';
 @import '../scss/content.scss';
 @import '../scss/header.scss';
 @import '../scss/swiper-brands.scss';
+@import '../scss/swiper-techno.scss';
+@import '../scss/swiper-prices.scss';
+@import '../scss/footer.scss';
+@import '../scss/modal.scss';
 @import '../scss/media.scss';
