--- a/src/scss/swiper-techno.scss
+++ b/src/scss/swiper-techno.scss
@@ -4,7 +4,7 @@ $gradcolor: #f8f8f8;
 $swiperBordCol: #eaeaea;
 $headerSwiperCol: #7e7e82;
 
-.remontBrands {
+.remontTechno {
   margin-top: 32px;
 
   .content-swiper {
@@ -39,65 +39,20 @@ $headerSwiperCol: #7e7e82;
   }
   .swiper-slide {
     text-align: center;
-    font-size: 18px;
-    display: flex;
-    justify-content: flex-end;
+    font-size: 16px;
+    font-weight: 600;
     align-items: center;
     border: 1px solid $swiperBordCol;
     border-radius: 6px;
     width: 240px;
-    height: 70px;
-    background-repeat: no-repeat;
-    background-position: 20% 50%;
+    height: 160px;
     background-color: $whitecolor;
-  }
-
-  .swiper-slide:nth-child(1) {
-    background-image: url(../img/brends/acer.svg);
-  }
-
-  .swiper-slide:nth-child(2) {
-    background-image: url(../img/brends/apple.svg);
-  }
-
-  .swiper-slide:nth-child(3) {
-    background-image: url(../img/brends/bosh.svg);
-  }
-
-  .swiper-slide:nth-child(4) {
-    background-image: url(../img/brends/hp.svg);
-  }
-
-  .swiper-slide:nth-child(5) {
-    background-image: url(../img/brends/lenovo.svg);
-  }
-
-  .swiper-slide:nth-child(6) {
-    background-image: url(../img/brends/samsung.svg);
-  }
-
-  .swiper-slide:nth-child(7) {
-    background-image: url(../img/brends/sony.svg);
-  }
-
-  .swiper-slide:nth-child(8) {
-    background-image: url(../img/brends/view.svg);
-  }
-
-  .swiper-slide:nth-child(9) {
-    background-image: url(../img/brends/acer.svg);
-  }
-
-  .swiper-slide:nth-child(10) {
-    background-image: url(../img/brends/acer.svg);
-  }
-
-  .swiper-slide:nth-child(11) {
-    background-image: url(../img/brends/acer.svg);
   }
 
   .button-link {
     background: url(../img/brends/brand-link.svg) no-repeat center;
+    position: relative;
+    top: 40%;
     width: 40px;
     height: 40px;
     margin-right: 16px;
