--- a/style.css
+++ b/style.css
@@ -736,6 +736,9 @@
     height: 200px;
     background-color: #fff;
     padding: 16px; }
+  .prices .swiper-pagination {
+    width: 200px !important;
+    height: 20px; }
 
 .prices__footer {
   font-size: 14px;
@@ -796,7 +799,7 @@
   margin-right: 0;
   margin-top: 0;
   height: 100%;
-  overflow: visible; }
+  overflow: auto; }
 
 .modal {
   display: flex;
