--- a/src/scss/media.scss
+++ b/src/scss/media.scss
@@ -8,7 +8,7 @@ $white: #fff;
 }
 
 @media screen and (max-width: 768px) {
-  .swiper-brands {
+  .remontBrands {
     .swiper-wrapper {
       display: flex;
       max-width: 768px;
@@ -21,7 +21,7 @@ $white: #fff;
       display: none;
     }
   }
-  .swiper-techno {
+  .remontTechno {
     .swiper-wrapper {
       display: flex;
       max-width: 768px;
@@ -46,7 +46,7 @@ $white: #fff;
   }
 }
 
-@media screen and (min-width: 769px) {
+@media (min-width: 769px) {
   .swiper-brands,
   .swiper-techno {
     .swiper-wrapper {
@@ -59,11 +59,22 @@ $white: #fff;
       overflow: hidden;
     }
   }
+
   .swiper-prices {
+    .prices__table-header {
+      display: table;
+      width: 100%;
+    }
     .swiper-wrapper {
       display: table;
-      height: 173px;
+      height: auto;
       margin-bottom: 10px;
+    }
+    .swiper-slide {
+      display: table;
+      width: 95%;
+      height: 64px;
+      text-align: start;
     }
   }
   .footer {
@@ -77,6 +88,22 @@ $white: #fff;
   }
   .footer__offerta {
     text-align: end;
+  }
+  .prices__first-column {
+    width: 40%;
+  }
+  .prices__second-column {
+    width: 20%;
+  }
+  .prices__third-column {
+    width: 20%;
+  }
+  .prices__table-header {
+    display: table-header-group;
+    text-align: left;
+    padding-left: 20px;
+    margin-bottom: 10px;
+    margin-top: 20px;
   }
 }
 
@@ -100,11 +127,7 @@ $white: #fff;
     align-items: flex-start;
   }
   .content__full-text {
-    display: block;
-  }
-
-  .content__text-more-more {
-    display: none;
+    display: inline;
   }
 
   .content__topic-img {
@@ -112,6 +135,9 @@ $white: #fff;
     width: 360px;
     height: 208px;
     border-radius: 15px;
+  }
+  .prices__footer {
+    width: 420px;
   }
 }
 
