--- a/src/scss/modal.scss
+++ b/src/scss/modal.scss
@@ -10,7 +10,7 @@ $bg-btn-color: #ff3e79;
   margin-right: 0;
   margin-top: 0;
   height: 100%;
-  overflow-x: visible;
+  overflow: auto;
 }
 
 .modal {
