--- a/src/scss/slider-prices.scss
+++ b/src/scss/slider-prices.scss
@@ -34,7 +34,7 @@ $linkColor: #1b1c21;
     width: 100%;
     height: 100%;
   }
-  .swiper-slide {
+  .prices__slide {
     display: flex;
     flex-direction: column;
     text-align: left;
