--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -3,9 +3,9 @@
 @import '../scss/burger-menu.scss';
 @import '../scss/content.scss';
 @import '../scss/header.scss';
-@import '../scss/swiper-brands.scss';
-@import '../scss/swiper-techno.scss';
-@import '../scss/swiper-prices.scss';
+@import '../scss/slider-brands.scss';
+@import '../scss/slider-techno.scss';
+@import '../scss/slider-prices.scss';
 @import '../scss/footer.scss';
 @import '../scss/modal.scss';
 @import '../scss/media.scss';
