--- a/src/scss/burger-menu.scss
+++ b/src/scss/burger-menu.scss
@@ -2,6 +2,7 @@ $fontcolor: #1b1c21;
 $hovercolor: #7e7e82;
 $whitecolor: #fff;
 
+//передаль на модальное окно dialog!!!!
 .menu {
   display: none;
   flex-direction: column;
