--- a/src/scss/slider-brands.scss
+++ b/src/scss/slider-brands.scss
@@ -21,6 +21,7 @@ $headerSwiperCol: #7e7e82;
     align-content: center;
     height: 80px;
     background: linear-gradient(90deg, $gradcolor, $whitecolor);
+    margin-bottom: 20px;
   }
 
   .remontBrands__header-name {
