--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,4 +1,4 @@
-@import 'node_modules/swiper/swiper.scss';
+@import '../../node_modules/swiper/swiper-bundle.css';
 @import '../scss/common.scss';
 @import '../scss/burger-menu.scss';
 @import '../scss/content.scss';
