--- a/src/scss/media.scss
+++ b/src/scss/media.scss
@@ -1,5 +1,6 @@
 $bgcolor: rgba(0, 0, 0, 0);
 $white: #fff;
+$bg-main: #f8f8f8;
 
 @media screen and (max-width: 400px) {
   .menu {
@@ -101,10 +102,11 @@ $white: #fff;
       display: table;
       height: auto;
       margin-bottom: 10px;
+      margin-left: 20px;
     }
     .prices__slide {
       display: table;
-      width: 95%;
+      width: 90%;
       height: 44px;
       text-align: start;
     }
@@ -128,7 +130,10 @@ $white: #fff;
     width: 20%;
   }
   .prices__third-column {
-    width: 20%;
+    width: 15%;
+  }
+  .prices__fourth-column {
+    width: 30%;
   }
   .prices__table-header {
     display: table-header-group;
@@ -182,6 +187,7 @@ $white: #fff;
     align-items: start;
     margin-left: auto;
     margin-right: auto;
+    background-color: $white;
   }
 
   .header {
@@ -241,10 +247,11 @@ $white: #fff;
     margin-left: 34px;
   }
   .main {
-    max-width: 1120px;
+    max-width: 1100px;
     margin-left: auto;
     margin-right: auto;
     align-self: baseline;
+    background-color: $bg-main;
   }
   .menu {
     display: block;
