--- a/style.css
+++ b/style.css
@@ -1446,10 +1446,11 @@ button.swiper-pagination-bullet {
   .swiper-prices .prices__wrapper {
     display: table;
     height: auto;
-    margin-bottom: 10px; }
+    margin-bottom: 10px;
+    margin-left: 20px; }
   .swiper-prices .prices__slide {
     display: table;
-    width: 95%;
+    width: 90%;
     height: 44px;
     text-align: start; }
   .footer {
@@ -1466,7 +1467,9 @@ button.swiper-pagination-bullet {
   .prices__second-column {
     width: 20%; }
   .prices__third-column {
-    width: 20%; }
+    width: 15%; }
+  .prices__fourth-column {
+    width: 30%; }
   .prices__table-header {
     display: table-header-group;
     text-align: left;
@@ -1507,7 +1510,8 @@ button.swiper-pagination-bullet {
     max-width: 1340px;
     align-items: start;
     margin-left: auto;
-    margin-right: auto; }
+    margin-right: auto;
+    background-color: #fff; }
   .header {
     display: none; }
   .content__text-more {
@@ -1553,10 +1557,11 @@ button.swiper-pagination-bullet {
   .content__menu li:nth-child(6) {
     margin-left: 34px; }
   .main {
-    max-width: 1120px;
+    max-width: 1100px;
     margin-left: auto;
     margin-right: auto;
-    align-self: baseline; }
+    align-self: baseline;
+    background-color: #f8f8f8; }
   .menu {
     display: block;
     justify-content: space-between;
